--- a/app/src/main/res/layout/contradiction_activity.xml
+++ b/app/src/main/res/layout/contradiction_activity.xml
@@ -11,10 +11,10 @@
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:text="Name"
             android:ems="10"
-            android:id="@+id/editText1"/>
+            android:id="@+id/teethNumberContradictionText"/>
     
     <EditText
             android:layout_width="match_parent"
