--- a/app/src/main/res/layout/fragment_contradiction.xml
+++ b/app/src/main/res/layout/fragment_contradiction.xml
@@ -6,90 +6,96 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
-                  android:layout_height="match_parent">
+                  android:layout_height="match_parent"
+                  android:layout_marginTop="9dp"
+                  android:layout_marginStart="8dp"
+                  android:layout_marginLeft="8dp">
         
         <TextView
-                android:text="TextView"
+                android:text="@string/contradiction"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView14"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/textView14"
+                android:textSize="20dp"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="Name"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/teethNumberContradictionText"/>
+                android:id="@+id/teethNumberContradictionText"
+                android:layout_weight="1"/>
         
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText2"/>
+                android:id="@+id/editText2" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText3"/>
+                android:id="@+id/editText3" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText4"/>
+                android:id="@+id/editText4" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText5"/>
+                android:id="@+id/editText5" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText6"/>
+                android:id="@+id/editText6" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText7"/>
+                android:id="@+id/editText7" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText8"/>
+                android:id="@+id/editText8" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText9"/>
+                android:id="@+id/editText9" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText10"/>
+                android:id="@+id/editText10" android:layout_weight="1"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="text"
+                android:text=""
                 android:ems="10"
-                android:id="@+id/editText11"/>
+                android:id="@+id/editText11" android:layout_weight="1"/>
     </LinearLayout>
 
 </FrameLayout>
