--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                 <TextView
                         android:text="@string/parameter"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView1"
                         android:layout_weight="1"
                         android:gravity="center"
@@ -74,70 +74,80 @@
                 <TextView
                         android:text="@string/teeth_number"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView2"
                         android:layout_weight="1"
                         android:gravity="center"/>
                 <TextView
                         android:text="@string/normal_module"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView3"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/transverse_module"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView4"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/axial_module"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView5"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/base_module"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView6"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/normal_pressure"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView7"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/pressure_angle"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView8"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/helix_angle"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView9"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/lead_angle"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView10"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/reference_diameter"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView11"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
                 <TextView
                         android:text="@string/base_diameter"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:id="@+id/textView12"
-                        android:layout_weight="1" android:gravity="center"/>
+                        android:layout_weight="1"
+                        android:gravity="center"/>
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
