--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,15 @@
             <Button
                     android:text="@string/clear"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/clearbtn" android:layout_weight="1"/>
+                    android:layout_height="wrap_content" android:id="@+id/clearBtn" android:layout_weight="1"/>
             <Button
                     android:text="@string/calculate"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/button6" android:layout_weight="1"/>
+                    android:layout_height="wrap_content" android:id="@+id/calculateBtn" android:layout_weight="1"/>
             <Button
                     android:text="@string/quit"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="1"/>
+                    android:layout_height="wrap_content" android:id="@+id/QuitBtn" android:layout_weight="1"/>
         </LinearLayout>
         <RelativeLayout
                 android:layout_width="match_parent"
